--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<title></title>
+	<title>New Year</title>
 </head>
 <body>
-
+	<script src="jquery-3.5.1.min.js"></script>
 </body>
 </html>
