--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
 	<title>New Year</title>
+        <meta charset="uft-8!"/>
 </head>
 <body>
 	<script src="jquery-3.5.1.min.js"></script>
